--- a/temp.ipynb
+++ b/temp.ipynb
@@ -262,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hear-bark', 'light-on', 'dog-out', 'family-out', 'bowel-problem']\n"
+      "['bowel-problem', 'light-on', 'hear-bark', 'dog-out', 'family-out']\n"
      ]
     }
    ],
@@ -737,19 +737,10 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "heuristic used : min-fill\n",
-      "heuristic used : min-fill\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bn_copy = copy.deepcopy(bn)\n",
-    "temp = marginal_distribution.marginal_distribution(bn_copy,{'dog-out'},{'family-out':True},'min-fill')"
+    "temp = marginal_distribution.marginal_distribution(bn_copy,{'dog-out'},{'family-out':True},'min-degree')"
    ]
   },
   {
@@ -762,15 +753,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   family-out  bowel-problem  dog-out         p\n",
-      "0       False          False    False  0.000000\n",
-      "1        True          False    False  0.718852\n",
-      "2       False           True    False  0.000000\n",
-      "3        True           True    False  0.079872\n",
-      "4       False          False     True  0.000000\n",
-      "5        True          False     True  0.045649\n",
-      "6       False           True     True  0.000000\n",
-      "7        True           True     True  2.236796\n"
+      "   dog-out      p\n",
+      "0    False  0.306\n",
+      "1     True  0.694\n"
      ]
     }
    ],
