thank you python

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -262,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bowel-problem', 'light-on', 'hear-bark', 'dog-out', 'family-out']\n"
+      "['bowel-problem', 'dog-out', 'light-on', 'hear-bark', 'family-out']\n"
      ]
     }
    ],
@@ -740,7 +740,7 @@
    "outputs": [],
    "source": [
     "bn_copy = copy.deepcopy(bn)\n",
-    "temp = marginal_distribution.marginal_distribution(bn_copy,{'dog-out'},{'family-out':True},'min-degree')"
+    "temp = marginal_distribution.marginal_distribution(bn_copy,{'dog-out'},{'family-out':True,'light-on':False},'min-degree')"
    ]
   },
   {
