--- a/temp.ipynb
+++ b/temp.ipynb
@@ -262,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bowel-problem', 'dog-out', 'light-on', 'hear-bark', 'family-out']\n"
+      "['light-on', 'hear-bark', 'dog-out', 'family-out', 'bowel-problem']\n"
      ]
     }
    ],
@@ -335,6 +335,49 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "6c96eed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('bowel-problem', 'dog-out'), ('dog-out', 'hear-bark'), ('family-out', 'light-on'), ('family-out', 'dog-out')]\n",
+      "PASSED\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bn.structure.edges)\n",
+    "if ('bowel-problem','dog-out') in bn.structure.edges:\n",
+    "    print('PASSED')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "028c4a01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hear-bark': False, 'bowel-problem': True, 'family-out': False, 'dog-out': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import map_mpe\n",
+    "\n",
+    "max_out_variables = ['bowel-problem','family-out']\n",
+    "cpt_dict,z_dict = map_mpe.mpe(bn,{'dog-out':True,'hear-bark':False,'bowel-problem':True})\n",
+    "print(z_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "1aeac307",
    "metadata": {},
    "outputs": [
@@ -360,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "e057915a",
    "metadata": {},
    "outputs": [
@@ -378,7 +421,7 @@
        "Name: dog-out, dtype: bool"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "be125fde",
    "metadata": {},
    "outputs": [],
@@ -400,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "7ae1c0d5",
    "metadata": {},
    "outputs": [
@@ -436,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "b13d5bc2",
    "metadata": {},
    "outputs": [
@@ -466,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "d83a40c6",
    "metadata": {},
    "outputs": [
@@ -506,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "0d6a2c95",
    "metadata": {},
    "outputs": [],
@@ -534,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "5485ccc1",
    "metadata": {},
    "outputs": [],
@@ -544,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "b9938b25",
    "metadata": {},
    "outputs": [
@@ -566,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "5d2308ca",
    "metadata": {},
    "outputs": [],
@@ -606,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "af8a9d03",
    "metadata": {},
    "outputs": [],
@@ -617,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "e3e28e28",
    "metadata": {},
    "outputs": [],
@@ -627,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "ead8626a",
    "metadata": {},
    "outputs": [
@@ -653,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "a26f0a18",
    "metadata": {},
    "outputs": [],
@@ -663,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "ecb87f1c",
    "metadata": {},
    "outputs": [],
@@ -673,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "e1888363",
    "metadata": {},
    "outputs": [],
@@ -683,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "dcd5e0ca",
    "metadata": {},
    "outputs": [
@@ -701,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "5bb2dd93",
    "metadata": {},
    "outputs": [
@@ -711,7 +754,7 @@
        "1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "878035d8",
    "metadata": {},
    "outputs": [],
@@ -732,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "384b3fd9",
    "metadata": {
     "scrolled": false
@@ -740,12 +783,12 @@
    "outputs": [],
    "source": [
     "bn_copy = copy.deepcopy(bn)\n",
-    "temp = marginal_distribution.marginal_distribution(bn_copy,{'dog-out'},{'family-out':True,'light-on':False},'min-degree')"
+    "temp = marginal_distribution.marginal_distribution(bn_copy,{'dog-out'},{'family-out':True},'min-degree')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "627c2ef8",
    "metadata": {},
    "outputs": [
