--- a/temp.ipynb
+++ b/temp.ipynb
@@ -262,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['light-on', 'hear-bark', 'dog-out', 'family-out', 'bowel-problem']\n"
+      "['dog-out', 'hear-bark', 'light-on', 'bowel-problem', 'family-out']\n"
      ]
     }
    ],
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6c96eed8",
+   "id": "75364903",
    "metadata": {},
    "outputs": [
     {
@@ -356,14 +356,14 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "028c4a01",
+   "id": "f8ebb4a0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'hear-bark': False, 'bowel-problem': True, 'family-out': False, 'dog-out': True}\n"
+      "{'bowel-problem': False}\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
     "import map_mpe\n",
     "\n",
     "max_out_variables = ['bowel-problem','family-out']\n",
-    "cpt_dict,z_dict = map_mpe.mpe(bn,{'dog-out':True,'hear-bark':False,'bowel-problem':True})\n",
+    "cpt_dict,z_dict = map_mpe.map(bn,{'bowel-problem'},{'dog-out':True,'hear-bark':True})\n",
     "print(z_dict)"
    ]
   },
